submit, next question works up until last one

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -21,7 +21,7 @@ Welcome to Quiz App.
 {
     private void ShowParticipatePage()
     {
-        Nav.NavigateTo("/participate");
+        Nav.NavigateTo("/participate/1");
     }
     private void ShowPresentPage()
     {
